Fix warning with deprecated API